# shroom-classifier

./: .dvcignore  .gitignore  Dockerfile  Dockerfile_copy.txt  LICENSE  Makefile  README.md  app.py  cloudbuild.yaml  custom_job_configs.yaml  data.dvc  keyfile.json  pyproject.toml  requirements.txt  requirements_dev.txt  shroom-project-410914-7503fcf85328.json
.dev/: deploy_app.yml  docker-image2.yml  requirements_image.yml
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: codecheck.yml  deploy.yml  deploy.yml.dontrun  deploy_app.yml  docker-image.yml  docker-image2.yml  requirements_image.yml  tests.yml
configs/: config.yaml
configs/experiment/: exp1.yaml
configs/experiments/: exp1.yaml
configs/pytest_config/: test_values.yaml  train_model_test.yaml
configs/train/: train_default.yaml
configs/train_config/: train_1.yaml  train_default.yaml  train_default_local.yaml  train_monitoring_cloud.yaml
deployment/: cloudbuild.yaml
dockerfiles/: fastapi_deployment.dockerfile  fastapi_main.dockerfile  fastapi_simple.dockerfile  predict_model.dockerfile  requirements.dockerfile  train_model.dockerfile  train_model2.dockerfile
docs/: mkdocs.yaml
reports/: README.md
reports/figures/: Untitled Diagram report.drawio  Untitled Diagram.drawio  mlops_diagram.drawio
shroom_classifier/: __init__.py  predict_model.py  train_model.py
shroom_classifier/app/: cloudbuild.yaml  cloudbuild_main.yaml  (+4 more)
tests/: __init__.py  test_app.py  test_data.py  test_model.py  test_predict_model.py  test_train_model.py  test_utils.py  test_visualisation.py
(+16 files in other folders)
