[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "shroom_classifier"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "peter", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["shroom_classifier"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"shroom_classifier/data/__init__.py" = ["F401"]
"shroom_classifier/__init__.py" = ["F401"]

[tool.coverage.run]
omit = [
    "shroom_classifier/data/make_dataset.py",
    ".venv/*",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    ]
